qml_ws/log/build_2024-03-30_23-46-19/qml_pkg/stdout_stderr.log
[ 50%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
/home/nida/Desktop/qml_ws/src/qml_pkg/src/main.cpp: In function ‘void update_slider(QObject*)’:
/home/nida/Desktop/qml_ws/src/qml_pkg/src/main.cpp:19:61: error: ‘findChild’ was not declared in this scope
   19 |     QObject *obj = object->findChild<QObject*>("Rectangle")>findChild<QObject*>("slider");
      |                                                             ^~~~~~~~~
/home/nida/Desktop/qml_ws/src/qml_pkg/src/main.cpp:19:78: error: expected primary-expression before ‘*’ token
   19 |     QObject *obj = object->findChild<QObject*>("Rectangle")>findChild<QObject*>("slider");
      |                                                                              ^
/home/nida/Desktop/qml_ws/src/qml_pkg/src/main.cpp:19:79: error: expected primary-expression before ‘>’ token
   19 |     QObject *obj = object->findChild<QObject*>("Rectangle")>findChild<QObject*>("slider");
      |                                                                               ^
gmake[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/main.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
